# splitspectre

./: .gitignore  Cargo.toml  README.md
basic_protocol/: Cargo.toml
basic_protocol/src/: client.rs  server.rs
chacha20/: Cargo.toml  out.txt  test.txt
chacha20/.cargo/: config.toml
chacha20/compiler_dumps/: expanded.txt  expanded_hygiene.txt  expanded_identified.txt  hir.txt  hir_identified.txt  hir_tree.txt  hir_typed.txt  mir.txt  mir_cfg.txt
chacha20/src/: main.rs
myrustc/: Cargo.toml
myrustc/split_codegen/: Cargo.toml
myrustc/split_codegen/src/: main.rs
myrustc/src/: lib.rs  main.rs
notes/: TODO.md  misc.md  type_infer.md
notes/paper_reviews/: swivel.md  viaduct.md
old_stuff/basic_protocol/: Cargo.toml
old_stuff/basic_protocol/src/: basic_client.rs  basic_common.rs  basic_server.rs  main.rs
old_stuff/rustc-boilerplate/: Cargo.toml  foo.txt
old_stuff/rustc-boilerplate/src/: main.rs
old_stuff/rustfix_usage/: Cargo.toml  handle-insert-only.json
old_stuff/rustfix_usage/src/: main.rs
old_stuff/sodium_oxide_usage/: Cargo.toml
old_stuff/split_functions/: Cargo.toml  hello.rs
old_stuff/split_functions/src/: main.rs
old_stuff/split_prototype/: Cargo.toml
old_stuff/split_prototype/src/: agent_server.rs  agent_simple.rs  simple.rs
old_stuff/unix_domain_communication/: Cargo.toml
old_stuff/unix_domain_communication/src/: client.rs  common.rs
secret_integers_usage/: Cargo.toml  expanded.txt  expanded_identified.txt  hir_typed.txt  mir.txt  myrustc  out.txt
secret_integers_usage/.cargo/: config.toml
secret_integers_usage/compiler_dumps/: expanded_hygiene.txt  foo.txt  hir.txt  hir_identified.txt  hir_tree.txt  identified.txt  mir-cfg.txt  normal.txt
secret_integers_usage/save-analysis-temp/: main.json
secret_integers_usage/src/: main.rs  simple.rs  transformer.rs
sodium_oxide_usage/: Cargo.toml
sodium_oxide_usage/src/: full_usage.rs  main.rs
split_chacha20/: Cargo.toml
split_chacha20/proto/: splitspectre.proto
split_chacha20/src/: agent_client.rs  agent_server.rs  agent_server_lib.rs  main.rs
split_functions/: Cargo.toml  hello
split_functions/save-analysis-temp/: hello.json
split_functions/src/: lib.rs  main.rs
split_prototype/: Cargo.toml  foo.txt
split_prototype/src/: agent_client.rs  agent_common.rs  agent_server.rs  main.rs
split_tonic/: Cargo.toml  build.rs
split_tonic/proto/: splitspectre.proto
split_tonic/src/: agent_server.rs  agent_simple.rs  main.rs
syn_examples/: Cargo.toml
syn_examples/src/: main.rs  test_file.rs
unix_domain_communication/: Cargo.toml  readme.md
unix_domain_communication/src/: client.rs  common.rs  server.rs
