[package]
name = "myrustc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain = "1.0.1"
rustc-workspace-hack = "1.0.0"
heck = "0.3.2"
codegen = { git = "https://github.com/basavesh/codegen.git"}
indexmap = "1.6.2"


[package.metadata.rust-analyzer]
rustc_private = true