[package]
name = "split_chacha20"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secret_integers = "0.1.6"
tonic = "0.4.3"
prost = "0.7"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
rustc-workspace-hack = "1.0.0"

[build-dependencies]
tonic-build = "0.4.2"