[package]
name = "syn_examples"
version = "0.1.0"
authors = ["Basavesh Shivakumar <basavesh.shivakmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.60", features = ["parsing", "full", "extra-traits"] }
quote = "1.0.9"