[package]
name = "basic_protocol"
version = "0.1.0"
authors = ["Basavesh Shivakumar <basavesh.shivakmar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basic_server"
path = "src/basic_server.rs"

[[bin]]
name = "basic_client"
path = "src/basic_client.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
sodiumoxide = "0.2.6"