[package]
name = "sodium_oxide_usage"
version = "0.1.0"
authors = ["Basavesh Shivakumar <basavesh.shivakumar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
secret_integers = "0.1.6"