[package]
name = "split_functions"
version = "0.1.0"
authors = ["Basavesh Shivakumar <basavesh.shivakumar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if_chain = "1.0.1"
anyhow = "1.0.39"
log = "0.4.1"

[dev-dependencies]
proptest = "1.0.0"