[package]
name = "unix_domain_communication"
version = "0.1.0"
authors = ["basavesh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
sodiumoxide = "0.2.6"
serde = { version = "1.0.123", features = ["derive"] }
